                                                         -*- coding: utf-8 -*-
  Changes with Apache Traffic Server 3.3.2


  *) [TS-1791] remove m_mutex acquire&release to avoid deadlock in
   ~LogBufferList(). Author: Gang Li <quehan@taobao.com>.
   
  *) [TS-1713] SRV support refine. Now the srv option is able to enable, with
   no crash. Be care, the hostdb.storage_size or ostdb.size need check.

  *) [TS-1632] In addition to the changes from TS-1674, also add
   some safety measures assuring that the stats sums don't go
   negative. Author: Yakov Kopel.

  *) [TS-1789] Script to compare RecordsConfig.cc default values with
   records.config.default.in: Author: Mark Harrison.

  *) [TS-1631] Mgmt API to clear stats does not actually clear it.
   Author: Yakov Kopel.

  *) [TS-1772] Remove multiple TS_INLINE defines

  *) [TS-1771] add http_load to the build

  *) [TS-1766] integrate AIO test into the autotools test suite

  *) [TS-1753] Add remap support to the cacheurl plugin
   Author: Mark Harrison <mark@mivok.net>

  *) [TS-1790] authproxy should accept 2xx as authorization success

  *) [TS-1780] Fix Debuntu build with hardening flags

  *) [TS-1623, TS-1625] Fixes for logging where the host name was not handled
    correctly because it was not in the URL.

  *) [TS-1754] Remove unecessary wWarnings from stats evaluation.
   Author: Yunkai Zhang.

  *) [TS-1169] Eliminate bogus asserts. Credits to Conan Wang.

  *) [TS-1764] Unify MAX/MIN definitions (in ink_defs.h). Also clean
   up the checks of gcc prior to v3.x (which we no longer support).

  *) [TS-1724] Add tool to compare records.config files to contrib
   Author: Mark Harrison <mark@mivok.net>

  *) [TS-1566] dynamic update for string vars does not work
   Author: Aidan McGurn <aidan.mcgurn@openwave.com>

  *) [TS-1708] Using tr-pass port option causes requests with large headers to hang

  *) [TS-1734] Remove dead code that invokes missing vmap_config tool